add WD shift kernel; sequence kernels for gpr, performance is bad: to check whether there are bugs

--- a/SynBio/notebooks/Regression on SynBio.ipynb
+++ b/SynBio/notebooks/Regression on SynBio.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pandas.read_csv('trainset.rbs1.v2.csv', delimiter=',')"
@@ -40,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -249,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# use one-hot-encoding of rbs1 and rbs2 as features\n",
@@ -263,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
@@ -280,6 +290,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -325,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -357,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def regression(model, X, y,is_print = True, is_plot = True):\n",
@@ -402,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -448,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -488,7 +507,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -535,7 +556,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -577,7 +600,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -638,7 +663,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -673,7 +700,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -724,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -768,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -807,8 +840,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAD8CAYAAACVZ8iyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd8VfUd//HXJzeLLAIkrGz2CDsiCOJCARducYAbZ+vP\nam0tP/eo1rZuVLRuq+JEEUQQFRQQwoawQhgJBhJmAmTn8/sjt/2lbcLITXLu+Dwfj/N45J57bs77\noMk7Z35FVTHGGBPYgpwOYIwxxnlWBsYYY6wMjDHGWBkYY4zBysAYYwxWBsYYY7AyMMYYg5WBMcYY\nrAyMMcYAwU4HOFZxcXGamprqdAxjjPEZS5cu3a2q8ceyrM+UQWpqKpmZmU7HMMYYnyEi2451WTtM\nZIwxxsrAGGOMlYExxhisDIwxxmBlYIwxBisDY4wxWBkYY4zBwfsMRGQ08BzgAl5X1SedymICV3ll\nNQXFpewqKmX3wXKKSyspKqmgpKKKqmqlqrpmWNiwkCDCg11EhLpoFRlKXFQocVFhtG8ZTliwy+Gt\nMMZzjpSBiLiAl4AzgTxgiYh8qapZTuQx/q+0oor1O4tZveMAG3cWk7P7IDmFh8g/UOrR9xWB9jHh\nJLWOoFu7KLq3j6Fn+2h6d2xJi1ArCeM7nNozGAxkq2oOgIh8CIwFrAxMozhQUsHiLXv5JWcPv2zZ\ny7r8Iirdf+VHhwfTKT6KoZ3akNwmgg4tw2kXE05cVBgx4SFEhwfTItRFcJDgChJUobyqmtKKKg6W\nVbLvUAV7DpVRWFxG3r4ScvcdZtuew0xb/ivFZdsBCA4SenaIYVBKK4Z0asPQzm1o2SLEyX8SY47I\nqTJIAHJrvc4DTnQoi/ET2QXFzFlXwNz1BSzdto+qaiU0OIgBSbFMHNGJvoktSU9oSUJsC0TkmL+v\nCIQHuQgPcREbEUpiq7qXU1V+PVDKul+LWJ67j2Xb9vPRklzeWrCVIIF+SbGM7NmOUb3b0aVtdCNt\ntTGNw6ufTSQiE4GJAMnJyQ6nMd5o6+5DfLXyV6avymfDrmIAenWI4bZTOzO8Sxz9kmIJD2mewzUi\nQkJsCxJiWzCyVzug5pzE8u37+Cl7N/M2FvL0rA08PWsDneIjObdvRy4akEBqXGSz5DPmSERVm3+l\nIkOBh1R1lPv1fQCq+uf6PpORkaH2oDoDUFJexYzV+Xy0JJfFW/cCcEJqK87t25GzerejQ8sWDies\n384DpczO2snMNTtZmLMHVRiYHMtlGUmc378jEaFe/feZ8TEislRVM45pWYfKIBjYCJwB7ACWAFeq\n6tr6PmNlYHL3HubtBVv5KDOX4tJKUttEcNkJSVzQP4GOsd5bAPXJP1DCtBW/8tmyPDbuOkh0eDAX\nD0xk/NAUOsdHOR3P+AGvLwMAETkbeJaaS0vfUNXHj7S8lUHgWpG7n1d+2My3WTsJEmFMnw5cfWIy\ng9NaH9exf2+lqizdto93F21j5uqdVFRXc2bPdtx8SicGpbR2Op7xYT5RBsfLyiDw/JKzhxe/z2b+\npt20bBHCVScmM35oilcfBvLU7oNlvLNgK28v3MaBkgoGp7bmrjO7MbRzG6ejGR9kZWB82src/Tw9\nawM/Ze8mLiqUG0/uxNVDUogKC5zj6YfLK/loSS6v/LiZXUVlDOnUmrvP6s4JqbanYI6dlYHxSVt3\nH+Kpb9Yzc81OWkeGctupnbl6SEqzXQ3kjUorqvhg8XYm/7CZwuIyzurVjj+O6UEnO6dgjoGVgfEp\nxaUVvDg3mzd+3kKoK4ibRnTihuFpRIfbTVr/UlJexRs/b+HlHzZTUlHF1Scm87szu9Mywv6NTP2s\nDIxPUFU+X76DJ2asY8+hci4dlMg9o7rTNjrc6Whea/fBMp6ds5F//rKdVhGh/GFMDy4ZmEhQkO+f\nSDeNz8rAeL2cwoP83y/WsGDzHgYkx/Lw+b3pmxjrdCyfsfbXAzw4bS2Z2/YxKKUVT17Uh67t7K5m\n85+sDIzXqqyq5tV5OTz33SbCgoP445geXHFCsv1l2wDV1cpny3fw+NdZHCqr4vbTunDrqZ0JDbYn\n05sax1MGgXN5hnHcpl3F3PPxSlbmHeDsPu156PzedkjIA0FBwiWDEjmtezwPf5XFM3M2MnNNPn+7\nrB+9O7Z0Op7xMfYnhGly1dXKa/NyOOf5n9i+9zAvXjmAyVcNsiJoJG2iwnj+igG8PiGDPYfKueCl\nn3n5h83/HovBmGNhewamSRUUlXL3xyuZv2k3Z/ZqxxMX9iE+OszpWH5pZK92DExpxaTPV/PUN+uZ\nu34Xz44bQIIPPqrDND/bMzBNZu76XYx+bj5Ltu7liQv7MGX8ICuCJtY6MpTJVw3k75f1Y11+MWc/\nN59v1+50OpbxAVYGptFVVlXzl2/Wc/1bmbSLCWf6b4Zz5YnJfvEcIV8gIlw0MJHpvxlOUusWTHx3\nKQ9/tZbyymqnoxkvZoeJTKMqKC7ltx8sZ1HOXq4YnMSD5/UO6DuInZQaF8mnt57EkzPX8+bPW1mZ\nu5+Xrx5Euxg7V2P+l+0ZmEazInc/573wEyty9/PXS/vx54v6WhE4LCzYxYPn9ealKweyfmcx577w\nE4u37HU6lvFCVgamUXy6NI/LXl1IiCuIz24dxiWDEp2OZGo5p28Hvrh9GFFhwVz52iLe/2Wb05GM\nl7EyMB6pqlYe/zqLuz9eyaDkVnx5x3B6dYxxOpapQ7d20Uy7Yxgnd41j0udreOjLtVRW2XkEU8PK\nwDTY4fJKbnlvKa/N38KEoSm8c8NgWkeGOh3LHEFMeAivX3MCNwxP460FW7n+7UyKSiucjmW8gJWB\naZCColIuf3UR363bxYPn9eKRsemEuOx/J1/gChLuP7cXT17UhwXZu7nslYXkHyhxOpZxWJP99IrI\nQyKyQ0RWuKeza713n4hki8gGERnVVBlM08guOMiFkxewufAgr03I4LphaU5HMg0wbnAyb153Ann7\nSrho8gI27Cx2OpJxUFP/KfeMqvZ3TzMARKQXMA7oDYwGJouIXXLiI5Zv38elryygrLKKjyYO5Yye\n7ZyOZDxwctd4pt48lGpVLnllAYty9jgdyTjEif36scCHqlqmqluAbGCwAznMcfphQwFXvvYL0eEh\nfHLLSfRJtIeh+YNeHWP47LZhtIsJZ8Ibi5mTtcvpSMYBTV0Gd4jIKhF5Q0RaueclALm1lslzzzNe\n7OtV+dz4diZpcZF8cutQUuMinY5kGlFCbAs+vnkoPdtHc/N7S/l8eZ7TkUwz86gMRGSOiKypYxoL\nvAx0BvoD+cDfGvD9J4pIpohkFhYWehLVeOCTpXn85oNl9E+K5cObh9jTRv1Uq8hQ3r9pCCemteau\nj1by7sKtTkcyzcijx1Go6shjWU5EXgOmu1/uAJJqvZ3onlfX958CTIGawW0antQ01LuLtnH/F2sY\n3iWOKRMGERFqTzDxZ1Fhwbxx7Qnc8c/l3D9tLeVVyg3D7QKBQNCUVxN1qPXyQmCN++svgXEiEiYi\naUBXYHFT5TAN9/aCrdz/xRpG9mzL69dkWBEEiPAQF5OvGsiY9PY8Oj2LV3/c7HQk0wya8qf7LyLS\nH1BgK3AzgKquFZGpQBZQCdyuqlVNmMM0wNsLtvLgl2s5q1c7XrxyoA2lGGBCg4N44YoB3DV1JX+e\nuZ7KauX207o4Hcs0oSYrA1Udf4T3Hgceb6p1G89YERiAYFcQz1zWD5fA07M2EOISJo7o7HQs00Rs\nv9/8h3/+st2KwPxbsCuIv17aj4pq5YkZ6wlxBdlNhn7KysD82+fL85j0xWpO79HWisD8W7AriGcv\n709lVTUPf5VFiCuIq4ekOB3LNDL7aTcAfLMmn3s+XsXQTm2YfJUVgflPIa4gXrhiIGf0aMv909Yw\nbUWdFwAaH2Y/8Yb5mwr5zQfL6ZfYktcmZNiANKZOocFBvHTVQAantubuqSuZu97uVPYnVgYBbmXu\nfm5+dymd46N487rBRIbZkUNTv/AQF69fk0HPDjHc+t4yfrFnGfkNK4MAtrnwINe+uZg2UaG8c/1g\nWrYIcTqS8QHR4SG8ff1gElu14MZ3Mlm/s8jpSKYRWBkEqF1FpUz4x2JcQcK7159IWxsk3RyH1pGh\nvHPDiUSEurjmjcXs2G/jIfg6K4MAdLCskmvfXML+w+W8dd1ge+icaZCE2Ba8ff1gDpdXcc0bi9l/\nuNzpSMYDVgYBpqKqmlvfW8rGXcVMvnoQ6Qn2GGrTcD3axzBlfAbb9xzmpncyKau0hwn4KiuDAKKq\nTPp8NfM37eaJC9M5pVu805GMHxjauQ1/v7wfS7bu495PVqFqz5T0RXbpSACZ/MNmpmbm8dvTu3D5\nCclOxzF+5Ny+Hdm25zBPz9pAaptI7jqzm9ORzHGyMggQM1fn8/SsDZzfr6P9oJomcdupndm25xDP\nfbeJ5NYRXDwo0elI5jjYYaIAsDrvAHdNXcHA5Fj+cklfRMTpSMYPiQiPXdCHkzq34b7PVrN0216n\nI5njYGXg53YVlXLjO0toExnGq+Pt7mLTtEKDg5h81UA6xoZz87tL7ZJTH2Jl4MdKK6qY+O5SDpZW\n8o9rM4iPDnM6kgkAsRGhvH7NCZRVVHPT25kcLq90OpI5BlYGfqrmyqE1rMzdz98v70+P9jFORzIB\npEvbKJ6/cgDrdxZxz8cr7QojH2Bl4Kfe/Hkrny7L484zujKqd3un45gAdFr3ttw3piczVu9k8g82\ndKa3szLwQwuyd/P4jHWc1asdd57R1ek4JoDdeHIa5/XryF+/3cCPGwudjmOOwKMyEJFLRWStiFSL\nSMZ/vXefiGSLyAYRGVVr/mj3vGwR+aMn6zf/K/9ACb/5YDlpcZH8/fL+BAXZlUPGOSLCUxf3oXu7\naH77wXK27znsdCRTD0/3DNYAFwHzas8UkV7AOKA3MBqYLCIuEXEBLwFjgF7AFe5lTSMoq6zi1veW\nUVpRxStXDyLKHkdtvEBEaDCvjh+EqjLx3UxKyu2RFd7IozJQ1XWquqGOt8YCH6pqmapuAbKBwe4p\nW1VzVLUc+NC9rGkEj01fx4rc/fz10n50aRvldBxj/i2lTSTPXTGADbuKeWDaGqfjmDo01TmDBCC3\n1us897z65tdJRCaKSKaIZBYW2vHGI/l8eR7vLtrGxBGdGNOng9NxjPkfp3Vvy29O68LHS/OYuiT3\n6B8wzeqoZSAic0RkTR1Tk/9Fr6pTVDVDVTPi4+2havXJLijmT5+tYXBaa+4d1d3pOMbU686R3RjW\npQ33T1vD2l8POB3H1HLUMlDVkaqaXsc07Qgf2wEk1Xqd6J5X33zTQCXlVdz2/jIiQl28cMUAgl12\ngZjxXq4g4blxA4iNCOG295dRVFrhdCTj1lS/Ob4ExolImIikAV2BxcASoKuIpIlIKDUnmb9sogwB\n4YFpa9hUcJBnLu9POxutzPiAuKgwXrpyIHn7SvjTZ6vthjQv4emlpReKSB4wFPhaRGYBqOpaYCqQ\nBXwD3K6qVapaCdwBzALWAVPdy5oG+HRpHh8vzeOO07owwsYmMD4kI7U1vzuzG9NX5fOhnT/wCuIr\nrZyRkaGZmZlOx/AaOYUHOfeFn+iT0JJ/3jQEl91PYHxMdbVyzZuLWbxlL1/eMZzu7aOdjuR3RGSp\nqmYcfUm7A9knlVVW8ZsPlhMaHMSz4/pbERifFBQk/P2y/kSHh3DHP5fZ/QcOszLwQU9/s4G1vxbx\nl4v70qFlC6fjGNNg8dFhPHt5fzYVHOSxr7OcjhPQrAx8zA8bCnj9py2MH5LCWfYAOuMHhneNY+KI\nTrz/y3a+XbvT6TgBy8rAh+w5WMY9H6+iW7soJp3T0+k4xjSae87qTu+OMfzh01UUFJU6HScgWRn4\nCFXlj5+tpqikgufGDbARy4xfCQ0O4rlxAyipqOLuj1dSXe0bF7b4EysDH/HRklxmZ+3i96O607OD\nDVRj/E+XtlHcf24v5m/azVsLtjodJ+BYGfiArbsP8cj0LIZ2asMNw9OcjmNMk7lycDJn9GjLU9+s\nJ7ug2Ok4AcXKwMtVVSu/m7qC4CDhb5f1s/EJjF8TEf58cR8iQl3c9dFKKqqqnY4UMKwMvNyUeTks\n276fR8am0zHWLiM1/q9tdDhPXNiH1TsO8MLcbKfjBAwrAy+2fmcRz8zeyJj09ozt39HpOMY0mzF9\nOnDRgARe+j6bFbn7nY4TEKwMvFR5ZTV3T11JTItgHrsgHRE7PGQCy0Nje9M2Oox7Pl5JaYXdndzU\nrAy81IvfZ7P21yIev7APbaLCnI5jTLOLCQ/hyYv7kl1wkGfmbHQ6jt+zMvBCa3Yc4KXvs7loQAKj\n7C5jE8BO6RbPuBOSeG1eDsu273M6jl+zMvAyFVXV3PvJKlpHhvLAeb2cjmOM4yad05P2MeH83g4X\nNSkrAy/zyg+bycov4rEL0omNCHU6jjGOiw4P4alL+rK58JAdLmpCVgZeZMPOYp6fu4nz+nW0w0PG\n1HJy13guz0ji9flbWJ1nYyc3BSsDL1FVrdz7yUpiwkN4yA4PGfM//nROT9pEhnLvp6vsZrQm4Omw\nl5eKyFoRqRaRjFrzU0WkRERWuKdXar03SERWi0i2iDwvds0kAG/+vIWVeQd48PzedvWQMXVo2SKE\nRy9IZ11+EVPm5Tgdx+94umewBrgImFfHe5tVtb97uqXW/JeBm4Cu7mm0hxl8Xu7ew/zt242c3qMt\n5/Xt4HQcY7zWqN7tOadPB577bhPZBQedjuNXPCoDVV2nqhuOdXkR6QDEqOoirRl8+R3gAk8y+DpV\nZdIXawgSeNRuLjPmqB46vzctQlz86bPV9qjrRtSU5wzSRGS5iPwoIie75yUAebWWyXPPC1jTVvzK\nvI2F/H5UdxLs2UPGHFV8dBiTzu7J4q17mZqZ63Qcv3HUMhCROSKypo5p7BE+lg8kq+oA4HfAP0Xk\nuB/CLyITRSRTRDILCwuP9+Neb9+hch6ZnkX/pFjGD011Oo4xPuPSjEQGp7XmiRnrKCwuczqOXzhq\nGajqSFVNr2OadoTPlKnqHvfXS4HNQDdgB5BYa9FE97z6vs8UVc1Q1Yz4+Phj3Saf8eeZ6ygqqeDJ\ni/vgskdTG3PMRIQnLuxDaUU1j07PcjqOX2iSw0QiEi8iLvfXnag5UZyjqvlAkYgMcV9FNAGot1T8\n2eIte5mamccNJ6fRo72NXGbM8erSNopbT+3Mlyt/5YcNBU7H8XmeXlp6oYjkAUOBr0VklvutEcAq\nEVkBfALcoqp73e/dBrwOZFOzxzDTkwy+qLyymkmfryYhtgV3ntHV6TjG+KzbTutMp/hIHpi21h5V\n4SFPryb6XFUTVTVMVdup6ij3/E9Vtbf7stKBqvpVrc9kug8zdVbVO9xXFQWU13/KYVPBQR4Z25uI\n0GCn4xjjs8KCXTw2Np3tew8z+YfNTsfxaXYHcjPL3XuY57/bxOje7TmjZzun4xjj807qEsfY/h15\n5YfNbNl9yOk4PsvKoJk9Mj2LIBF7IqkxjWjSOT0JCw7igWlrCMCDDY3CyqAZzV2/i9lZu/jtGV1t\nPGNjGlHb6HDuGdWd+Zt2M31VvtNxfJKVQTMprajioS+z6BwfyfXD0pyOY4zfuXpICukJMTz+9ToO\nlVU6HcfnWBk0k1d+3Mz2vYd5ZGw6ocH2z25MY3MFCQ+fn87OolJe/D7b6Tg+x34rNYPte2qudDi3\nbweGdYlzOo4xfmtQSisuGZTI6/NzyCm0B9kdDyuDZvDY11m4RJh0Tk+noxjj9/4wugfhwS4e+irL\nTiYfByuDJjZ/UyHfZu3ijtO70KGlnTQ2pqnFR4dx15ndmLexkNlZu5yO4zOsDJpQRVU1D3+VRUqb\nCG4YbieNjWkuE4am0L1dNI9+nWV3Jh8jK4Mm9M7CbWQXHOT+c3oRHuJyOo4xASPYFcQD5/Uid28J\n//hpi9NxfIKVQRPZfbCMZ2dv5JRu8ZzRs63TcYwJOMO6xDGqdzte+j6bXUWlTsfxelYGTeRv326k\npKKK+8/tZaOXGeOQSWf3orJKeeqb9U5H8XpWBk1gXX4RHy3ZzvihKXRpG+V0HGMCVnKbCG48OY3P\nlu1g+fZ9TsfxalYGjUxVeezrLGJahNjjqY3xAred1oX46DAetktNj8jKoJHNWVfAz9l7uGtkN2Ij\nQp2OY0zAiwoL5t5R3VmRu5+v7LlF9bIyaETlldU8/nUWXdpGceWJyU7HMca4XTwwkd4dY3hq5nq7\n1LQeVgaN6N1F29i65zCTzulJiMv+aY3xFkFBNU8A2LG/hDd+tktN6+LpsJdPi8h6EVklIp+LSGyt\n9+4TkWwR2SAio2rNH+2ely0if/Rk/d7kwOEKnv9uEyd3jeO07nYpqTHe5qTOcZzZqx2Tv99MYXGZ\n03G8jqd/vs4G0lW1L7ARuA9ARHoB44DewGhgsoi4RMQFvASMAXoBV7iX9XkvzN1EUWkFfzrbnj9k\njLe6b0wPSiuqeGbORqejeB1Px0D+VlX/9eDwRUCi++uxwIeqWqaqW4BsYLB7ylbVHFUtBz50L+vT\ntu85zNsLt3LpoER6dohxOo4xph6d4qO4ekgKHy7eTnZBsdNxvEpjHti+Hpjp/joByK31Xp57Xn3z\nfdpTs9YTHBTE787s7nQUY8xR/PaMrkSGBvPkzA1OR/EqRy0DEZkjImvqmMbWWmYSUAm835jhRGSi\niGSKSGZhYWFjfutGs2z7Pr5elc9NIzrRvmW403GMMUfROjKUW0/rzJx1u/glZ4/TcbzGUctAVUeq\nanod0zQAEbkWOBe4Sv//HR07gKRa3ybRPa+++fWte4qqZqhqRnx8/HFtWHNQVZ6csZ64qDBuHtHJ\n6TjGmGN0/bA0OrQM54kZ6+xGNDdPryYaDdwLnK+qh2u99SUwTkTCRCQN6AosBpYAXUUkTURCqTnJ\n/KUnGZz03boCFm/dy50juxIZFux0HGPMMQoPcXH3Wd1ZmXeAr1fbjWjg+TmDF4FoYLaIrBCRVwBU\ndS0wFcgCvgFuV9Uq98nmO4BZwDpgqntZn1NVXfPwq7S4SMadkHT0DxhjvMqFAxLo0T6av3yzgfLK\naqfjOM6jP2dVtcsR3nsceLyO+TOAGZ6s1xt8uiyPTQUHmXzVQLvBzBgf5AoS/jimB9e+uYQPl2xn\nwtBUpyM5yn6LNUBpRRXPzN5Iv6RYxqS3dzqOMaaBTukWz4lprXn+u00cKqs8+gf8mJVBA7y1YCv5\nB0q5b0wPG6vAGB8mIvxhTA92HyznjQAfEc3K4DgdKKng5R82c0q3eIZ0auN0HGOMhwYmt2JU73a8\nOi+HvYfKnY7jGCuD4/TavBwOlFTw+1F2g5kx/uL3o7pzuLySl77PdjqKY6wMjkNhcRlv/LyFc/p2\nID2hpdNxjDGNpEvbaC4ZlMi7C7exY3+J03EcYWVwHF76PpuyymruPrOb01GMMY3szpE1P9cvfLfJ\n4STOsDI4Rrl7D/P+L9u4dFAineJtXGNj/E1CbAuuPDGZj5fmsWX3IafjNDsrg2P0/HebEBF+a+Ma\nG+O3bj+tC6GuIJ6ZHXiPuLYyOAY5hQf5dFke44ek0DG2hdNxjDFNJD46jOuGpfLVql9Zl1/kdJxm\nZWVwDJ6ds4mwYBe3ntrZ6SjGmCZ284jORIUF87dvA2vvwMrgKNbvLOKrVb9y3bBU4qLCnI5jjGli\nLSNCuHlEJ+as28WK3P1Ox2k2VgZH8czsjUSFBjPRHlFtTMC4dlgarSJCAurcgZXBEazOO8Cstbu4\n4eQ0YiNCnY5jjGkmUWHB3HxKZ37cWMjSbXudjtMsrAyO4Jk5G4mNCOH64WlORzHGNLMJQ1NoExnK\nM7MD474DK4N6rMjdz9z1Bdx0cidiwkOcjmOMaWYRocHcempnfsreHRDDY1oZ1OO5ORtpFRHCNSel\nOh3FGOOQq4ekEB8dxjNz/P/cgZVBHZZv38f3Gwq5aUQnomw4S2MCVniIi9tP7cyinL0s2Lzb6ThN\nysqgDs/O2USriJCAH/nIGAPjBifTNjqM5+b497kDj8pARJ4WkfUiskpEPheRWPf8VBEpcY+L/O+x\nkd3vDRKR1SKSLSLPi5eNDrNs+z5+3FjIRPeNJ8aYwBYeUnPD6S9b9rLIj88deLpnMBtIV9W+wEbg\nvlrvbVbV/u7pllrzXwZuArq6p9EeZmhUz83ZROvIUCYMTXE6ijHGS1wxOJl4P9878KgMVPVbVf3X\nwKGLgMQjLS8iHYAYVV2kqgq8A1zgSYbGtCJ3Pz9uLOTGk9OItL0CY4xbeIiLW07pzMKcPX57ZVFj\nnjO4HphZ63WaiCwXkR9F5GT3vAQgr9Yyee55dRKRiSKSKSKZhYWFjRi1bi/O3USsnSswxtThqhOT\niYsK4zk/He/gqGUgInNEZE0d09hay0wCKoH33bPygWRVHQD8DviniMQcbzhVnaKqGaqaER8ff7wf\nPy5rdhxgzroCbhiWZucKjDH/o2bvoBMLNu9hyVb/uyv5qGWgqiNVNb2OaRqAiFwLnAtc5T70g6qW\nqeoe99dLgc1AN2AH/3koKdE9z3EvzN1EdHgw1wxLdTqKMcZLXXVizV3JL871v7GSPb2aaDRwL3C+\nqh6uNT9eRFzurztRc6I4R1XzgSIRGeK+imgCMM2TDI1h/c4iZq3dxXXD0uxuY2NMvVqEurjh5DR+\n3FjISj97oqmn5wxeBKKB2f91CekIYJWIrAA+AW5R1X/tV90GvA5kU7PHMBOHvTA3m8hQF9fbXoEx\n5ijGD0mhZYsQXvzev/YOPDo4rqpd6pn/KfBpPe9lAumerLcxbS48yIzV+dxySmd7Mqkx5qiiw0O4\nblgqz87ZxLr8Inp2OO7ToV4p4O9AfvmHzYS6grjBnkxqjDlG156USlRYsF/tHQR0GeTtO8wXy3dw\nxeBkG8XMGHPMYiNCGT80hRmr88kuOOh0nEYR0GUwZV4OItgoZsaY43bj8DTCgoN45cfNTkdpFAFb\nBgXFpXy4JJeLBiTSMbaF03GMMT6mTVQY405I5ovlO9ixv8TpOB4L2DL4x/wtVFZVc8upnZ2OYozx\nUTe5jyp94AIyAAALSklEQVS8Ni/H4SSeC8gyOHC4gvcWbeOcvh1Ji4t0Oo4xxkclxLbgggEJfLhk\nO7sPljkdxyMBWQbvLtrKofIqbj3F9gqMMZ655ZTOlFVW8+bPW5yO4pGAK4OS8ire/Hkrp3aPp1dH\n/7g+2BjjnC5toxjduz3vLNxGUWmF03EaLODK4OOluew5VM5tp9Z5v5wxxhy3207tQnFpJe8v2u50\nlAYLqDKoqKrm1R9zGJTSihNSWzkdxxjjJ/oktmR4lzje+HkLZZVVTsdpkIAqg69X5bNjfwm3ntIZ\nLxtt0xjj4245pTOFxWV8vswrHsR83AKmDFSVV37cTLd2UZzeo63TcYwxfmZYlzakJ8QwZV4OVdXq\ndJzjFjBl8MPGQtbvLObmEZ0JCrK9AmNM4xIRbh7RmZzdh5idtcvpOMctYMrg1R8306FlOOf16+h0\nFGOMnxqT3p7k1hG88uNm3GN9+YyAKIOVuftZlLOX64elERocEJtsjHFAsCuIm0Z0YkXufn7Z4ltD\nYwbEb8Yp83KIDg9m3OAkp6MYY/zcpYMSaRMZyhQfe0SF35fBtj2HmLkmn6tOTCHahrQ0xjSx8BAX\nE4amMnd9AZt2FTsd55h5XAYi8qiIrHIPe/mtiHR0zxcReV5Est3vD6z1mWtEZJN7usbTDEfy+vwt\nBAcFcZ0NaWmMaSbjh6YQHhLE6/N95xEVjbFn8LSq9lXV/sB04AH3/DFAV/c0EXgZQERaAw8CJwKD\ngQdFpEnuACsqreDjpblcOCCBdjHhTbEKY4z5H60jQ7l0UBKfL99BQVGp03GOicdloKpFtV5GAv86\nhT4WeEdrLAJiRaQDMAqYrap7VXUfMBsY7WmOusSEh/DprSdxx+n26AljTPO6YXgaFdXVvL1wq9NR\njkmjnDMQkcdFJBe4iv+/Z5AA5NZaLM89r775dX3fiSKSKSKZhYWFDcrWu2NLklpHNOizxhjTUKlx\nkYzu3Z73Fm3nUFml03GO6pjKQETmiMiaOqaxAKo6SVWTgPeBOxornKpOUdUMVc2Ij49vrG9rjDHN\n4qYRnThQUsHUzNyjL+ywYyoDVR2pqul1TNP+a9H3gYvdX+8Aal/LmeieV998Y4zxKwOTW5GR0oo3\nft7i9Y+oaIyribrWejkWWO/++ktggvuqoiHAAVXNB2YBZ4lIK/eJ47Pc84wxxu/cMDyN3L0lXv+I\niuBG+B5Pikh3oBrYBtzinj8DOBvIBg4D1wGo6l4ReRRY4l7uEVX1rVv1jDHmGJ3Vuz1JrVvwj59y\nGJ3e3uk49fK4DFT14nrmK3B7Pe+9Abzh6bqNMcbbuYKE605K45HpWazI3U//pFinI9XJ7+9ANsYY\np112QhLRYcH84yfvvQnNysAYY5pYVFjNs9FmrK4ZYMsbWRkYY0wzuOakVADeXrDV0Rz1sTIwxphm\nkNgqgtHp7flwsXfehGZlYIwxzeT6YakUlVby2bI8p6P8DysDY4xpJgOTW9EvsSVvLthKtZfdhGZl\nYIwxzUREuH54GjmFh/hxU8Oet9ZUrAyMMaYZjUnvQNvoMN78eavTUf6DlYExxjSj0OAgJgxNYd7G\nQrILvGckNCsDY4xpZlcMTiY0OMir9g6sDIwxppm1iQrjgv4d+WzZDg6UVDgdB7AyMMYYR1xzUiol\nFVV87CVjHVgZGGOMA3p3bMkJqa14Z+E2rxjrwMrAGGMccs1JqWzfe5gfNhQ4HcXKwBhjnDKqd3va\nx4Tzlhc8r8jKwBhjHBLiCuLqIcnM37Sb7IKDjmaxMjDGGAeNG5xMqCuIdxZudTSHR2UgIo+KyCoR\nWSEi34pIR/f8U0XkgHv+ChF5oNZnRovIBhHJFpE/eroBxhjjy+Kiwji3Xwc+XZpHcalzl5l6umfw\ntKr2VdX+wHTggVrvzVfV/u7pEQARcQEvAWOAXsAVItLLwwzGGOPTJgxN5VB5FZ8v3+FYBo/KQFWL\nar2MBI52fdRgIFtVc1S1HPgQGOtJBmOM8XX9k2Lpm9iSdxZuo2b4+Obn8TkDEXlcRHKBq/jPPYOh\nIrJSRGaKSG/3vASg9h0Wee55xhgT0MYPSSG74CALc/Y4sv6jloGIzBGRNXVMYwFUdZKqJgHvA3e4\nP7YMSFHVfsALwBcNCSciE0UkU0QyCwu963GvxhjTmM7r15HYiBDeXbjNkfUftQxUdaSqptcxTfuv\nRd8HLnZ/pkhVD7q/ngGEiEgcsANIqvWZRPe8+tY9RVUzVDUjPj7+ODfNGGN8R3iIi8szkvg2axf5\nB0qaff2eXk3UtdbLscB69/z2IiLurwe717MHWAJ0FZE0EQkFxgFfepLBGGP8xdVDUqhW5YNftjf7\nuj09Z/Ck+5DRKuAs4E73/EuANSKyEngeGKc1Kqk5lDQLWAdMVdW1HmYwxhi/kNQ6gtO6t+WDJblU\nVFU367qDPfmwql5cz/wXgRfreW8GMMOT9RpjjL8aPySF695awrdrd3FO3w7Ntl67A9kYY7zIiG7x\nJLZqwXuLmvdEspWBMcZ4EVeQcOWJySzM2dOsw2JaGRhjjJe5LCOJEJfw3qLmO5FsZWCMMV4mLiqM\nMekd+HRZHofLK5tlnVYGxhjjha4ekkJxaSVfrfy1WdZnZWCMMV7ohNRWdGsX1WyHiqwMjDHGC4kI\nN57ciX5JLSmrrGry9Xl0n4Exxpimc1lGEpdlJB19wUZgewbGGGOsDIwxxlgZGGOMwcrAGGMMVgbG\nGGOwMjDGGIOVgTHGGKwMjDHGAKKqTmc4JiJSCDT0Ad9xwO5GjOMkf9kWf9kOsG3xRv6yHeDZtqSo\n6jENIO8zZeAJEclU1QynczQGf9kWf9kOsG3xRv6yHdB822KHiYwxxlgZGGOMCZwymOJ0gEbkL9vi\nL9sBti3eyF+2A5ppWwLinIExxpgjC5Q9A2OMMUcQMGUgIk+LyHoRWSUin4tIrNOZGkJELhWRtSJS\nLSI+ebWEiIwWkQ0iki0if3Q6T0OJyBsiUiAia5zO4gkRSRKR70Uky/3/1p1OZ2ooEQkXkcUistK9\nLQ87nckTIuISkeUiMr2p1xUwZQDMBtJVtS+wEbjP4TwNtQa4CJjndJCGEBEX8BIwBugFXCEivZxN\n1WBvAaOdDtEIKoG7VbUXMAS43Yf/m5QBp6tqP6A/MFpEhjicyRN3AuuaY0UBUwaq+q2qVrpfLgIS\nnczTUKq6TlU3OJ3DA4OBbFXNUdVy4ENgrMOZGkRV5wF7nc7hKVXNV9Vl7q+Lqfnlk+BsqobRGgfd\nL0Pck0+eGBWRROAc4PXmWF/AlMF/uR6Y6XSIAJUA5NZ6nYeP/uLxRyKSCgwAfnE2ScO5D62sAAqA\n2arqq9vyLHAvUN0cK/OrMZBFZA7Qvo63JqnqNPcyk6jZLX6/ObMdj2PZDmMam4hEAZ8C/0dVi5zO\n01CqWgX0d58X/FxE0lXVp87riMi5QIGqLhWRU5tjnX5VBqo68kjvi8i1wLnAGerF19QebTt83A6g\n9gjfie55xkEiEkJNEbyvqp85nacxqOp+EfmemvM6PlUGwDDgfBE5GwgHYkTkPVW9uqlWGDCHiURk\nNDW7XOer6mGn8wSwJUBXEUkTkVBgHPClw5kCmogI8A9gnar+3ek8nhCR+H9dKSgiLYAzgfXOpjp+\nqnqfqiaqaio1PyNzm7IIIIDKAHgRiAZmi8gKEXnF6UANISIXikgeMBT4WkRmOZ3peLhP4t8BzKLm\nROVUVV3rbKqGEZEPgIVAdxHJE5EbnM7UQMOA8cDp7p+NFe6/SH1RB+B7EVlFzR8es1W1yS/L9Ad2\nB7IxxpiA2jMwxhhTDysDY4wxVgbGGGOsDIwxxmBlYIwxBisDY4wxWBkYY4zBysAYYwzw/wC8Xd4Q\nOBbjsAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x111f59128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.linspace(-2, 4, 100)\n",
+    "plt.plot(x, np.log(norm.pdf(x, 1, 0.1)/norm.pdf(x, 1.5, 0.2)))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -829,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
