experiment setting changed for SGD vs. Frugal

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,24 +51,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_settings(distro_lst, datasize_lst, stepsize_lst):\n",
-    "    if (len(distro_lst) > 1) and (len(datasize_lst)==1) and (len(stepsize_lst)==1):\n",
-    "        setting_lst = [[i, datasize_lst[0], stepsize_lst[0]] for i in distro_lst]\n",
-    "    elif (len(distro_lst)==1) and (len(datasize_lst) > 1) and (len(stepsize_lst)==1):\n",
-    "        setting_lst = [[distro_lst[0], i, stepsize_lst[0]] for i in datasize_lst]\n",
-    "    elif (len(distro_lst)==1) and (len(datasize_lst)==1) and (len(stepsize_lst) > 1):\n",
-    "        setting_lst = [[distro_lst[0], datasize_lst[0], i] for i in stepsize_lst]\n",
-    "    else: raise Exception(\"Setting inputs are wrong!\")\n",
-    "    return setting_lst, len(stepsize_lst)>1"
+    "def get_settings(distro_lst, datasize_lst, stepsize_lst, est_lst):\n",
+    "    len_lst = [len(distro_lst), len(datasize_lst), len(stepsize_lst), len(est_lst)]\n",
+    "    if len_lst.count(1) != len(len_lst)-1: raise Exception(\"Setting inputs are wrong!\")\n",
+    "    \n",
+    "    N_settings = max((len_lst))\n",
+    "    setting_lst = []\n",
+    "    for lst in [distro_lst, datasize_lst, stepsize_lst, est_lst]:\n",
+    "        if len(lst)==1: \n",
+    "            lst = lst*N_settings\n",
+    "        setting_lst.append(lst)\n",
+    "    return np.asarray(setting_lst).T, len(stepsize_lst)>1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['mix', '11', 'const', 'sgd'],\n",
+       "       ['mix', '100', 'const', 'sgd'],\n",
+       "       ['mix', '200', 'const', 'sgd']], dtype='<U5')"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_settings(distro_lst=['mix'], \n",
+    "             datasize_lst=[11, 100, 200], \n",
+    "             stepsize_lst=['const'], \n",
+    "             est_lst = ['sgd'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +109,20 @@
     "        # mean: -1.3\n",
     "        # std: 30.779035604224564\n",
     "        # var: 947.3490327261234\n",
-    "        sizes = np.array([0.3, 0.2, 0.1, 0.15, 0.25]) * datasize\n",
-    "        d1 = np.random.normal(2, 7, int(sizes[0]))\n",
-    "        d2 = np.random.normal(0, 0.7, int(sizes[1]))\n",
-    "        d3 = np.random.normal(36, 26, int(sizes[2]))\n",
-    "        d4 = np.random.normal(5, 77, int(sizes[3]))\n",
-    "        d5 = np.random.normal(-77, 7, int(sizes[4]))\n",
-    "        mix_lst = np.append(d1, np.append(d2, np.append(d3, np.append(d4, d5))))\n",
-    "        np.random.shuffle(mix_lst)\n",
+    "        mix_lst = np.zeros(datasize)\n",
+    "        sizes = np.array([0.3, 0.2, 0.1, 0.15, 0.25])\n",
+    "        mixtures = [(2,7), (0,0.7), (36, 26), (5,77), (-77,7)]\n",
+    "        acc_sizes = [sum(sizes[:i+1]) for i in range(len(sizes))]\n",
+    "\n",
+    "        for d_idx in range(datasize):\n",
+    "            rdn = np.random.uniform(0,1)\n",
+    "            mix_id = 0\n",
+    "            for m_id in acc_sizes:\n",
+    "                if rdn > m_id:\n",
+    "                    mix_id += 1\n",
+    "                else:break\n",
+    "            data_point = np.random.normal(mixtures[mix_id][0], mixtures[mix_id][1])\n",
+    "            mix_lst[d_idx] = data_point\n",
     "        return mix_lst\n",
     "    elif distro == 'exp':\n",
     "        return np.random.exponential(scale=1, size=datasize)\n",
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 249,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50132702, 0.70339174, 0.89988036])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_q_batch(dataset, tau_lst):\n",
     "    if len(dataset.shape) != 1:\n",
@@ -136,14 +158,12 @@
     "    q_batch = np.zeros(len(tau_lst))\n",
     "    for i, tau in enumerate(tau_lst):\n",
     "        q_batch[i] = np.percentile(dataset, tau*100)\n",
-    "    return q_batch\n",
-    "\n",
-    "get_q_batch(np.random.uniform(0,1, 10000), [0.5, 0.7, 0.9])"
+    "    return q_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,36 +175,54 @@
     "        q_batches = np.zeros((dataset.shape[0], len(tau_lst)))\n",
     "        for i in range(q_batches.shape[0]):\n",
     "            q_batches[i] = get_q_batch(dataset[i], tau_lst)\n",
-    "    return q_batches\n",
-    "\n",
-    " "
+    "    return q_batches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quantile_sgd_compare(distro_lst, datasize_lst, stepsize_lst, \n",
-    "                         g_test=False, s_test=False, tau_lst=tau_vals):\n",
-    "    # generate different settings\n",
-    "    setting_lst, is_stepsize = get_settings(distro_lst, datasize_lst, stepsize_lst)\n",
+    "def get_q_ests(dataset, step_size, tau_lst, est_type):\n",
+    "\n",
+    "    if len(dataset.shape)!=2: raise Exception('Dataset for q_est calculation of wrong shape:' + str(dataset.shape))\n",
     "    \n",
+    "    res = np.zeros((dataset.shape[0], len(tau_lst)))\n",
+    "    proc = np.zeros((dataset.shape[0], len(tau_lst), dataset.shape[1]))\n",
+    "    print ('res ', res.shape)\n",
+    "    print ('proc', proc.shape)\n",
+    "    return res, proc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quantile_sgd_compare(distro_lst, datasize_lst, stepsize_lst, est_lst,\n",
+    "                         g_test=False, s_test=False, tau_lst=tau_vals):\n",
+    "    \n",
+    "    if g_test and s_test: raise Exception(\"g_test and s_test can't both be true\")\n",
+    "    \n",
+    "    # generate different settings\n",
+    "    setting_lst, is_stepsize = get_settings(distro_lst, datasize_lst, stepsize_lst, est_lst)\n",
+    "    print (setting_lst)\n",
     "    # if only stepsize changes, generate dataset and q_batches\n",
     "    dataset, q_batches = 0, 0\n",
     "    if is_stepsize:\n",
     "        dataset = get_dataset(distro_lst[0], datasize_lst[0], g_test)\n",
     "        q_batches = get_q_batches(dataset, tau_lst)\n",
     "        \n",
-    "#     # for each setting = [distro, datasize, stepsize]\n",
-    "#     for idx, setting in enumerate(setting_lst):\n",
-    "#         # generate all the data\n",
-    "#         distro, datasize, stepsize = setting[idx][0], setting[idx][1], setting[idx][2]\n",
-    "#         if not is_stepsize:\n",
-    "#             dataset = get_dataset(distro, datasize, g_test, s_test)\n",
-    "#             q_batches = get_q_batches(dataset, tau_lst, g_test)\n",
-    "#         q_sgd_res, q_sgd_proc = get_q_sgd(dataset, stepsize, s_test, tau_lst)\n",
+    "    # for each setting = [distro, datasize, stepsize]\n",
+    "    for idx, setting in enumerate(setting_lst):\n",
+    "        # generate all the data\n",
+    "        distro, datasize, stepsize, est_type = setting[0], int(setting[1]), setting[2], setting[3]\n",
+    "        if not is_stepsize:\n",
+    "            dataset = get_dataset(distro, datasize, g_test)\n",
+    "            q_batches = get_q_batches(dataset, tau_lst)\n",
+    "        q_est_res, q_est_proc = get_q_ests(dataset, stepsize, tau_lst, est_type)\n",
     "        \n",
     "#         # generate charts and tables?\n",
     "#         name = get_name(distro, datasize, stepsize, tau_list, g_test, s_test)\n",
@@ -213,27 +251,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g_test True\n"
+      "[['mix' '11' 'const' 'sgd']\n",
+      " ['mix' '100' 'const' 'sgd']\n",
+      " ['mix' '200' 'const' 'sgd']]\n",
+      "res  (12, 5)\n",
+      "proc (12, 5, 11)\n",
+      "res  (12, 5)\n",
+      "proc (12, 5, 100)\n",
+      "res  (12, 5)\n",
+      "proc (12, 5, 200)\n"
      ]
     }
    ],
    "source": [
-    "quantile_sgd_compare(distro_lst=['gau 1'], datasize_lst=[100], stepsize_lst=['const', 'others'], g_test=True)"
+    "quantile_sgd_compare(distro_lst=['mix'], \n",
+    "                     datasize_lst=[11, 100, 200], \n",
+    "                     stepsize_lst=['const'], \n",
+    "                     est_lst = ['sgd'],\n",
+    "                     g_test=True,\n",
+    "                     s_test=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -241,6 +285,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
