--- a/QuantEst/sgd_est_experiment/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_est_experiment/comparison_image_generation.ipynb
@@ -345,6 +345,7 @@
     "    \n",
     "    q_shape = list(dataset.shape)\n",
     "    q_shape.insert(-1, N_q)\n",
+    "#     print (q_shape)\n",
     "    filename = 'q_sgd_procs.dat'\n",
     "    q_sgd_procs = np.memmap(filename, dtype=np.float32, mode='w+', shape=tuple(q_shape))\n",
     "    \n",
